spacing and style fixes

--- a/app/scss/components/_modal.scss
+++ b/app/scss/components/_modal.scss
@@ -13,6 +13,9 @@
   .modal-content {
     margin-bottom: 80px;
     margin-left: 0;
+    position: absolute;
+    top: 25px;
+    left: 5px;
 
     .color-btn {
       width: 30px;
